<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="12dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOrderItemCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:text="@string/order_item_count"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOrderAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:text="@string/order_delivery_address"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/txtOrderItemCount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOrderTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:text="@string/order_delivery_time"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/txtOrderAddress" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOrderPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:text="@string/order_price"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/txtOrderTime" />

    <View
        android:id="@+id/divider_horizontal"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="22dp"
        android:background="@color/divider_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtOrderPrice" />

    <View
        android:id="@+id/divider_vertical"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_horizontal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnDelivered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one_regular"
        android:gravity="center"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:text="@string/delivered"
        android:textColor="#22B00A"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider_vertical"
        app:layout_constraintTop_toTopOf="@id/divider_horizontal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnNotDelivered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one_regular"
        android:gravity="center"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:text="@string/not_delivered"
        android:textColor="#BF0808"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/divider_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>