<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgUserPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="34dp"
        android:src="@drawable/photo_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/view_background"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imgUserPhoto">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="Ім’я: Акакій" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/phone"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="Телефон: +3809111111111" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/card"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="Картка: 5654 2356 3548 2564" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="30dp"
        android:background="@color/button_color"
        android:fontFamily="@font/russo_one_regular"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/view_order"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>