<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@drawable/dishes_filter_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="12dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/russo_one_regular"
        android:text="@string/cuisine"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/cuisineSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/AppTheme.Spinner"
        app:layout_constraintEnd_toEndOf="@id/txtRate"
        app:layout_constraintStart_toStartOf="@id/txtRate"
        app:layout_constraintTop_toBottomOf="@id/txtCuisine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/russo_one_regular"
        android:text="@string/dish_type"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/cuisineSpinner"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/typeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/AppTheme.Spinner"
        app:layout_constraintEnd_toEndOf="@id/txtRate"
        app:layout_constraintStart_toStartOf="@id/txtRate"
        app:layout_constraintTop_toBottomOf="@id/txtType" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/russo_one_regular"
        android:text="@string/restaurant_rating"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/typeSpinner" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/ratingSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/AppTheme.Spinner"
        app:layout_constraintEnd_toEndOf="@id/txtRate"
        app:layout_constraintStart_toStartOf="@id/txtRate"
        app:layout_constraintTop_toBottomOf="@id/txtRate" />


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toTopOf="@+id/btnFilterRestaurants"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/ratingSpinner" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnFilterRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="18dp"
        android:background="@color/button_color"
        android:fontFamily="@font/russo_one_regular"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingEnd="10dp"
        android:paddingBottom="2dp"
        android:text="@string/filter"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/ratingSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>