<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imgUserPhoto"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:layout_height="40dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/toolbarHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/russo_one_regular"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        tools:text="Main" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:fontFamily="@font/russo_one_regular"
        app:layout_constraintBottom_toBottomOf="@id/toolbarHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbarHeader" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgUserPhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="34dp"
        android:src="@drawable/photo_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/view_background"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imgUserPhoto">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:hint="@string/name_hint"
            android:theme="@style/CustomEditTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:theme="@style/CustomEditTextView"
                tools:text="Акакій" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:hint="@string/phone_hint"
            android:theme="@style/CustomEditTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/roboto_regular"
                android:inputType="phone"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:theme="@style/CustomEditTextView"
                tools:text="+3809111111111" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="36dp"
            android:hint="@string/card_hint"
            android:theme="@style/CustomEditTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/roboto_regular"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:maxLength="19"
                android:theme="@style/CustomEditTextView"
                tools:text="5654 2356 3548 2564" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>