<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@drawable/restaurant_info_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="27dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="27dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtWorkHoursHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/work_schedule"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workHoursRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/txtWorkHoursHeader"
        app:layout_constraintTop_toBottomOf="@id/txtWorkHoursHeader"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:listitem="@layout/work_hour_item" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPhoneHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/phone"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/workHoursRecyclerView"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/txtPhoneHeader"
        app:layout_constraintBottom_toBottomOf="@id/txtPhoneHeader"
        app:layout_constraintTop_toTopOf="@id/txtPhoneHeader"
        tools:text="092 11 11 111"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtAddressHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/address"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/txtPhoneHeader" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/txtAddressHeader"
        app:layout_constraintBottom_toBottomOf="@id/txtAddressHeader"
        app:layout_constraintTop_toTopOf="@id/txtAddressHeader"
        tools:text="вулиця Смілянська, 31, Черкаси"/>


</androidx.constraintlayout.widget.ConstraintLayout>